Fix spacing bug in menu page site header #1634

--- a/src/sass/_menu-page.scss
+++ b/src/sass/_menu-page.scss
@@ -62,6 +62,7 @@ $_menu-page-upper-inline-spacing: 26px;
 
 .menu-page__close_nav {
   align-self: center;
+  margin-right: functions.px-to-rem(16px);
   @supports(display: flex) {
     display: flex;
   }
